upgrade fixed, footer absolute, z-index

--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,7 @@ main nav {
   padding-top: 1rem;
   color: var(--grey);
   background-color: black;
+  z-index: 2;
 }
 
 main nav ul li {
@@ -112,9 +113,13 @@ main nav span:hover #create-playlist {
 /* General - Footer */
 
 footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
   height: 80px;
   padding: 0 1rem;
   background-color: #282828;
+  z-index: 3;
 }
 
 footer i {
@@ -138,7 +143,6 @@ footer i {
 }
 
 .flex-col {
-  display: flex;
   flex-direction: column;
 }
 
@@ -195,6 +199,7 @@ main nav div.bottom-nav span.profile-text {
 /* Classes - Content Nav */
 
 .content-nav {
+  margin-top: 8.5rem;
   margin-bottom: 4rem;
 }
 
@@ -435,11 +440,15 @@ main nav img#profile-icon {
 /* ID - Content Upgrade */
 
 #upgrade {
-  margin-bottom: 2rem;
-  height: 10vh;
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 80px;
   padding-right: 1rem;
   justify-content: flex-end;
-  background-color: #080b12;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 1;
 }
 
 #upgrade-btn {
